--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,10 @@ project(lyra_demo VERSION 0.1.0)
 #################################################
 #install
 #################################################
-install(TARGETS ${MODULE_LIB_NAME}  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${ANDROID_ABI})
-install(DIRECTORY  ${PROJECT_PATH}/${module}/api/ DESTINATION ${CMAKE_INSTALL_PREFIX}/api )
+#install(TARGETS ${MODULE_LIB_NAME}  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/${ANDROID_ABI})
+#install(DIRECTORY  ${PROJECT_PATH}/${module}/api/ DESTINATION ${CMAKE_INSTALL_PREFIX}/api )
 
-
+ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/libs/)
 ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/app/cpp/)
 ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/liblyra/)
 ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/sparse_matmul/)
