--- a/libs/hello_world/CMakeLists.txt
+++ b/libs/hello_world/CMakeLists.txt
@@ -5,5 +5,5 @@ ADD_EXECUTABLE(helloworld
         nativelib.cpp
         )
 TARGET_LINK_LIBRARIES(helloworld
-        glog_lib
+        ${GLOG_LIBS}
         )
